--- a/requirements.txt
+++ b/requirements.txt
@@ -10,17 +10,28 @@ async-timeout==3.0.1
 asyncio==3.4.3
 attrs==21.2.0
 beautifulsoup4
-bs4==0.0.1
+bs4
+cachetools==5.1.0
 caio==0.9.3
 certifi==2021.10.8
 cffi==1.15.0
 chardet==3.0.4
 charset-normalizer==2.0.10
+click==8.1.3
 colorama==0.4.4
 cryptography==37.0.2
 cssselect==1.1.0
+dhooks==1.1.4
 fake-useragent==0.1.11
+Flask==2.1.2
 frozenlist==1.3.0
+giphy-client==1.0.0
+google-api-core==2.7.3
+google-api-python-client==2.47.0
+google-auth==2.6.6
+google-auth-httplib2==0.1.0
+google-search-results==2.4.1
+googleapis-common-protos==1.56.1
 googlesearch-python==1.1.0
 googletrans==4.0.0rc1
 h11==0.9.0
@@ -28,12 +39,17 @@ h2==3.2.0
 hpack==3.0.0
 hstspreload==2021.12.1
 httpcore==0.9.1
-httpx==0.23.0
+httplib2==0.20.4
+httpx==0.13.3
 humanfriendly==10.0
+humanize==4.2.1
 hyperframe==5.2.0
 idna==2.10
 importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
 lxml==4.8.0
+MarkupSafe==2.1.1
 mpmath==1.2.1
 multidict==5.2.0
 numpy==1.22.3
@@ -41,24 +57,32 @@ oauthlib==3.2.0
 orjson==3.6.7
 outcome==1.1.0
 parse==1.19.0
+protobuf==3.20.1
+psutil==5.9.1
 psycopg2==2.9.3
-py-cord==2.0.0b7
+py-cord==2.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 pyee==8.2.2
 PyNaCl==1.4.0
 pyOpenSSL==22.0.0
+pyparsing==3.0.9
 pyppeteer==1.0.2
 pyquery==1.4.3
 pyreadline3==3.4.1
 PySocks==1.7.1
+python-dateutil==2.8.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 requests==2.25.1
 requests-html==0.10.0
 requests-oauthlib==1.3.1
 rfc3986==1.5.0
+rsa==4.8
 schedule==1.1.0
 selenium==4.1.5
+simpcalci==0.0.2
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
@@ -75,13 +99,15 @@ typing-extensions==3.10.0.2
 tzdata==2021.5
 tzlocal==4.1
 Unidecode==1.3.2
+uritemplate==4.1.1
 urllib3==1.26.8
 w3lib==1.22.0
-wavelink==1.2.5
+wavelink==1.3.1
 websocket-client==1.3.2
 websockets==10.3
+Werkzeug==2.1.2
+wikipedia==1.4.0
 wsproto==1.1.0
 yarl==1.7.2
 zipp==3.8.0
-google-api-python-client==2.47.0
-giphy-client==1.0.0
+Janome==0.4.2
